petclinic/dev/petclinic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: spring-petclinic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: dev
  labels:
    app: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - name: spring-petclinic
          image: docker.io/seymaca/spring-petclinic:11
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /livez
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          volumeMounts:
            - mountPath: /bindings/secret
              name: binding
              readOnly: true
      volumes:
        - name: binding
          projected:
            sources:
              - secret:
                  name: demo-db
